[build-system]
requires = ["hatchling"]
build-backend = 'hatchling.build'

[project]
name = "fastapix"
version = "0.0.0"
description = "FastAPI X is a powerful CLI tool to help you! :rocket:"
readme = "README.md"
authors = [
    { name = "Marcelo Trylesinski", email = "marcelotryle@email.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
license = "MIT"
requires-python = ">=3.7"
dependencies = []
optional-dependencies = {}

[project.urls]
Homepage = "https://github.com/Kludex/fastapix"
Source = "https://github.com/Kludex/fastapix"
Twitter = "https://twitter.com/marcelotryle"
Funding = 'https://github.com/sponsors/Kludex'

[tool.mypy]
strict = true
show_error_codes = true

[tool.flake8]
statistics = true
max-line-length = 88
ignore = ["E203", "E501", "W503"]
per-file-ignores = ["__init__.py:F401"]

[tool.black]
target-version = ["py37"]

[tool.isort]
profile = "black"
combine_as_imports = true

[tool.pytest.ini_options]
addopts = ["--strict-config", "--strict-markers"]
filterwarnings = ["error"]

[tool.coverage.run]
source_pkgs = ["fastapix", "tests"]

[tool.coverage.report]
show_missing = true
skip_covered = true
